minor bug fix for background overflow on mobile devices

--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -4,7 +4,7 @@ body {
   overflow: hidden;
 }
 
-.background-components {
+#background-components {
   margin: 0;
   padding: 0;
   overflow: hidden;
